[gd_scene load_steps=3 format=3 uid="uid://cqetdfovdhup5"]

[ext_resource type="Script" uid="uid://bbx5xhkackocl" path="res://scripts/main.gd" id="1_o5qli"]

[sub_resource type="Theme" id="Theme_sgp6g"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -379.0
offset_bottom = -444.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.901961, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Colyseus Chat"

[node name="username" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/username"]
layout_mode = 2
text = "Name: "

[node name="usernameCtrl" type="LineEdit" parent="VBoxContainer/username"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 16

[node name="room" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/room"]
layout_mode = 2
text = "Room name or Id: "

[node name="roomCtrl" type="LineEdit" parent="VBoxContainer/room"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 16

[node name="buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="createBtn" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
theme = SubResource("Theme_sgp6g")
text = "Create"

[node name="joinBtn" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
text = "Join"
